# FeedMakerApplications

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
11toon/: capture_item_11toon.py  site_config.json
_adulti/: capture_item_adulti.py  site_config.json
_agit/: convert_agit_url_to_blacktoon.py
_allall/: capture_item_allall.py  site_config.json
_am7/: capture_item_link_title.pl
_bookdb/: capture_item_link_title.py
_buzztoon/: remove_anchor_images.py  site_config.json
_cine21/: capture_item_cine21.py
_community/: capture_item_clien.py  capture_item_community_caution.py
_copytoon/: site_config.json
_egloos/: capture_item_link_title.py
_hodu/: site_config.json
_jmana/: site_config.json
_khan/: capture_item_khannews.py
_manamoa/: capture_item_manamoa.py  convert_img_list_to_html.py  site_config.json
_marumaru/: capture_item_marumaru.py  post_process_marumaru.py  site_config.json
_minitoon/: capture_item_minitoon.py
_moneytoday/: capture_item_moneytoday.py  post_process_moneytoday.py
_myktoon/: capture_item_myktoon.py  post_process_myktoon.py
_nate/: capture_item_natewebtoonmobile.py
_ornson/: capture_item_ornson.py
_sciencetimes/: capture_item_sciencetimes.py
_skytoon/: site_config.json
_smilekhan/: post_process_sportskhan.pl
_sportschosun/: capture_item_link_title.py
_sportsdonga/: capture_item_link_title.py
_sportskhan/: capture_item_link_title.py  post_process_sportskhan.py
_steemit/: capture_item_steemit.py
_stoo/: capture_item_stoo.py  post_process_stoo.py
_torrentdia/: capture_item_torrentdia.py  (+1 more)
(+3867 files in other folders)
