[project]
name = "fma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "bs4>=0.0.2",
    "cairosvg>=2.8.2",
    "dotenv>=0.9.9",
    "fastapi>=0.118.2",
    "feedparser>=6.0.12",
    "filelock>=3.20.0",
    "mail1>=4.1.0",
    "ordered-set>=4.1.0",
    "pdf2image>=1.17.0",
    "pdftotext>=3.0.0",
    "pillow>=11.3.0",
    "psutil>=7.1.0",
    "pyheif>=0.8.0",
    "pymysql>=1.1.2",
    "pyrss2gen>=1.1",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
    "selenium>=4.36.0",
    "sqlalchemy>=2.0.43",
    "urllib3>=2.5.0",
]
